# digit-converter

./: .travis.yml  README.md  README.txt  digit_converter.py  pyproject.toml  test.py  travis.yml
.github/workflows/: python-publish.yml
