[tool.poetry]
name = "digit_converter"
version = "1.1"
description = "A cool tool for digits converting, such as transforming a real number to a binary sequence. It could be applied in Genetic Algorithm."
authors = ["William Song <30965609+Freakwill@users.noreply.github.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/Freakwill/digit_converter"
repository = "https://github.com/Freakwill/digit_converter"
keywords = ["Digit Converting", "Encoding", "Genetic Algorithm"]
classifiers = [
    'License :: Public Domain',  # Public Domain
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Natural Language :: English'
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.14"]
build-backend = "poetry.masonry.api"

