[tool.poetry]
name = "digit_converter"
version = "2.1"
description = "A useful tool for digit conversion, applicable in Genetic Algorithms (GA). It transforms a number into a list of digits under any base, for example, `[1, 0, 1, 0, 1, 1, 1, 0] <-> 174`."
authors = ["William Song <30965609+Freakwill@users.noreply.github.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/Freakwill/digit_converter"
repository = "https://github.com/Freakwill/digit_converter"
keywords = ["Digit Converting", "Encoding", "Genetic Algorithm"]
classifiers = [
    'License :: Public Domain',  # Public Domain
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Natural Language :: English'
]
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
